{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 21,
  "lineage": "e7be7230-f111-e288-2368-18f8443f69ed",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "bastion_host_linuxvm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/92882f0b-81c9-4214-8f4b-115816a1938a/resourceGroups/Azure-DEV_rg-default_xveiup/providers/Microsoft.Network/networkInterfaces/Azure-DEV-bastion_host_linuxvm_nic",
            "internal_domain_name_suffix": "c33t322yxeuu5b0xlllm2tlw2b.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "bastion-host-ip-1",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/92882f0b-81c9-4214-8f4b-115816a1938a/resourceGroups/Azure-DEV_rg-default_xveiup/providers/Microsoft.Network/publicIPAddresses/Azure-DEV-bastion_host_ip",
                "subnet_id": "/subscriptions/92882f0b-81c9-4214-8f4b-115816a1938a/resourceGroups/Azure-DEV_rg-default_xveiup/providers/Microsoft.Network/virtualNetworks/Azure-DEV-Default-Vnet/subnets/Azure-DEV-Default-Vnet-web_subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus2",
            "name": "Azure-DEV-bastion_host_linuxvm_nic",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "Azure-DEV_rg-default_xveiup"
          },
          "dependencies": [
            "azurerm_public_ip.bastion_host_ip",
            "azurerm_resource_group.MyRG",
            "azurerm_subnet.web_subnet",
            "azurerm_virtual_network.Vnet",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/92882f0b-81c9-4214-8f4b-115816a1938a/resourceGroups/Azure-DEV_rg-default_xveiup/providers/Microsoft.Network/networkInterfaces/Azure-DEV-nic",
            "internal_domain_name_suffix": "c33t322yxeuu5b0xlllm2tlw2b.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-linuxvm-ip-1",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/92882f0b-81c9-4214-8f4b-115816a1938a/resourceGroups/Azure-DEV_rg-default_xveiup/providers/Microsoft.Network/publicIPAddresses/Azure-DEV-publicip",
                "subnet_id": "/subscriptions/92882f0b-81c9-4214-8f4b-115816a1938a/resourceGroups/Azure-DEV_rg-default_xveiup/providers/Microsoft.Network/virtualNetworks/Azure-DEV-Default-Vnet/subnets/Azure-DEV-Default-Vnet-web_subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus2",
            "mac_address": "60-45-BD-BD-58-AC",
            "name": "Azure-DEV-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "Azure-DEV_rg-default_xveiup",
            "virtual_machine_id": "/subscriptions/92882f0b-81c9-4214-8f4b-115816a1938a/resourceGroups/Azure-DEV_rg-default_xveiup/providers/Microsoft.Compute/virtualMachines/Azure-DEV-web-linuxvm"
          },
          "dependencies": [
            "azurerm_public_ip.publicip",
            "azurerm_resource_group.MyRG",
            "azurerm_subnet.web_subnet",
            "azurerm_virtual_network.Vnet",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/92882f0b-81c9-4214-8f4b-115816a1938a/resourceGroups/Azure-DEV_rg-default_xveiup/providers/Microsoft.Network/networkSecurityGroups/Azure-DEV-Default-Vnet-web_subnet-nsg",
            "location": "eastus2",
            "name": "Azure-DEV-Default-Vnet-web_subnet-nsg",
            "resource_group_name": "Azure-DEV_rg-default_xveiup",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-22",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-443",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-80",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.MyRG",
            "azurerm_subnet.web_subnet",
            "azurerm_virtual_network.Vnet",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/92882f0b-81c9-4214-8f4b-115816a1938a/resourceGroups/Azure-DEV_rg-default_xveiup/providers/Microsoft.Network/networkSecurityGroups/Azure-DEV-Default-Vnet-web_subnet-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "Azure-DEV-Default-Vnet-web_subnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "Azure-DEV_rg-default_xveiup",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.MyRG",
            "azurerm_subnet.web_subnet",
            "azurerm_virtual_network.Vnet",
            "random_string.random"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/92882f0b-81c9-4214-8f4b-115816a1938a/resourceGroups/Azure-DEV_rg-default_xveiup/providers/Microsoft.Network/networkSecurityGroups/Azure-DEV-Default-Vnet-web_subnet-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "Azure-DEV-Default-Vnet-web_subnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "Azure-DEV_rg-default_xveiup",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.MyRG",
            "azurerm_subnet.web_subnet",
            "azurerm_virtual_network.Vnet",
            "random_string.random"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/92882f0b-81c9-4214-8f4b-115816a1938a/resourceGroups/Azure-DEV_rg-default_xveiup/providers/Microsoft.Network/networkSecurityGroups/Azure-DEV-Default-Vnet-web_subnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "Azure-DEV-Default-Vnet-web_subnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "Azure-DEV_rg-default_xveiup",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.MyRG",
            "azurerm_subnet.web_subnet",
            "azurerm_virtual_network.Vnet",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion_host_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/92882f0b-81c9-4214-8f4b-115816a1938a/resourceGroups/Azure-DEV_rg-default_xveiup/providers/Microsoft.Network/publicIPAddresses/Azure-DEV-bastion_host_ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "104.208.162.251",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "Azure-DEV-bastion_host_ip",
            "resource_group_name": "Azure-DEV_rg-default_xveiup",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.MyRG",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion_service_publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/92882f0b-81c9-4214-8f4b-115816a1938a/resourceGroups/Azure-DEV_rg-default_xveiup/providers/Microsoft.Network/publicIPAddresses/Azure-DEV-bastion-service-publicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "104.209.253.119",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "Azure-DEV-bastion-service-publicip",
            "resource_group_name": "Azure-DEV_rg-default_xveiup",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.MyRG",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/92882f0b-81c9-4214-8f4b-115816a1938a/resourceGroups/Azure-DEV_rg-default_xveiup/providers/Microsoft.Network/publicIPAddresses/Azure-DEV-publicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "104.208.163.23",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "Azure-DEV-publicip",
            "resource_group_name": "Azure-DEV_rg-default_xveiup",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.MyRG",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastion_service_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.101.0/27"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/92882f0b-81c9-4214-8f4b-115816a1938a/resourceGroups/Azure-DEV_rg-default_xveiup/providers/Microsoft.Network/virtualNetworks/Azure-DEV-Default-Vnet/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Azure-DEV_rg-default_xveiup",
            "virtual_network_name": "Azure-DEV-Default-Vnet"
          },
          "dependencies": [
            "azurerm_resource_group.MyRG",
            "azurerm_virtual_network.Vnet",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/92882f0b-81c9-4214-8f4b-115816a1938a/resourceGroups/Azure-DEV_rg-default_xveiup/providers/Microsoft.Network/virtualNetworks/Azure-DEV-Default-Vnet/subnets/Azure-DEV-Default-Vnet-web_subnet",
            "name": "Azure-DEV-Default-Vnet-web_subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Azure-DEV_rg-default_xveiup",
            "virtual_network_name": "Azure-DEV-Default-Vnet"
          },
          "dependencies": [
            "azurerm_resource_group.MyRG",
            "azurerm_virtual_network.Vnet",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/92882f0b-81c9-4214-8f4b-115816a1938a/resourceGroups/Azure-DEV_rg-default_xveiup/providers/Microsoft.Network/virtualNetworks/Azure-DEV-Default-Vnet/subnets/Azure-DEV-Default-Vnet-web_subnet",
            "network_security_group_id": "/subscriptions/92882f0b-81c9-4214-8f4b-115816a1938a/resourceGroups/Azure-DEV_rg-default_xveiup/providers/Microsoft.Network/networkSecurityGroups/Azure-DEV-Default-Vnet-web_subnet-nsg",
            "subnet_id": "/subscriptions/92882f0b-81c9-4214-8f4b-115816a1938a/resourceGroups/Azure-DEV_rg-default_xveiup/providers/Microsoft.Network/virtualNetworks/Azure-DEV-Default-Vnet/subnets/Azure-DEV-Default-Vnet-web_subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_network_security_rule.web_nsg_rule_inbound",
            "azurerm_resource_group.MyRG",
            "azurerm_subnet.web_subnet",
            "azurerm_virtual_network.Vnet",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "Vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f33e7b17-b998-4f29-8757-5ad6ce4d76e1",
            "id": "/subscriptions/92882f0b-81c9-4214-8f4b-115816a1938a/resourceGroups/Azure-DEV_rg-default_xveiup/providers/Microsoft.Network/virtualNetworks/Azure-DEV-Default-Vnet",
            "location": "eastus2",
            "name": "Azure-DEV-Default-Vnet",
            "resource_group_name": "Azure-DEV_rg-default_xveiup",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/92882f0b-81c9-4214-8f4b-115816a1938a/resourceGroups/Azure-DEV_rg-default_xveiup/providers/Microsoft.Network/virtualNetworks/Azure-DEV-Default-Vnet/subnets/Azure-DEV-Default-Vnet-web_subnet",
                "name": "Azure-DEV-Default-Vnet-web_subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/92882f0b-81c9-4214-8f4b-115816a1938a/resourceGroups/Azure-DEV_rg-default_xveiup/providers/Microsoft.Network/networkSecurityGroups/Azure-DEV-Default-Vnet-web_subnet-nsg"
              },
              {
                "address_prefixes": [
                  "10.0.101.0/27"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/92882f0b-81c9-4214-8f4b-115816a1938a/resourceGroups/Azure-DEV_rg-default_xveiup/providers/Microsoft.Network/virtualNetworks/Azure-DEV-Default-Vnet/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ],
            "tags": {
              "environment": "DEV",
              "owners": "Azure"
            }
          },
          "dependencies": [
            "azurerm_resource_group.MyRG",
            "random_string.random"
          ]
        }
      ]
    }
  ]
}